--- a/package.json
+++ b/package.json
@@ -34,5 +34,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
     "validator": "^13.7.0"
-  }
+  },
+  "proxy":"http://localhost:5000"
 }
