--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -35,5 +36,5 @@
     "mongoose": "^6.2.3",
     "validator": "^13.7.0"
   },
-  "proxy":"http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
