--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -59,5 +60,5 @@
   "devDependencies": {
     "concurrently": "^7.0.0"
   },
-  "proxy":"http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
