--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.2.3",
     "morgan": "^1.10.0",
     "validator": "^13.7.0"
