--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "moment": "^2.29.1",
     "mongoose": "^6.2.3",
     "morgan": "^1.10.0",
+    "rechart": "^0.0.1",
+    "recharts": "^2.1.9",
     "validator": "^13.7.0"
   },
   "proxy": "http://localhost:5000"
